<resources>
    <string name="app_name">MyGithubUserApps</string>
    <string name="welcome">Welcome</string>
    <string name="connect">Connect with developers around the world</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="share">Share</string>
    <string name="follow">Follow</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="discover">Discover</string>
    <string name="intro">Discover Developer around the world, learn how they build various project in various technology</string>
    <string name="search">Search</string>
    <string name="lets_searching">there is no result on your serching lets searching another one</string>
    <string name="repository">repository</string>
    <string name="no_follow">No One Is Follow</string>
    <string name="no_following">No One Is Following</string>
    <string name="change_language">Change Language</string>
    <string name="notification_reminder">Notification Reminder</string>
    <string name="notif_on">otification Turn On</string>
    <string name="notif_off">Notification Turn Off</string>
    <string name="no_favorit_user">There is No One In Your Favorit List, Lets Add Someone</string>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <string-array name="avatar">
        <item>user1</item>
        <item>user2</item>
        <item>user3</item>
        <item>user4</item>
        <item>user5</item>
        <item>user6</item>
        <item>user7</item>
        <item>user8</item>
        <item>user9</item>
        <item>user10</item>
    </string-array>
</resources>