<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_search"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_search"
        android:text="@string/search"
        android:textColor="@color/text_secondary_color"
        android:textAlignment="textStart"
        android:background="@drawable/rounded_corner"/>
    <Button
        android:id="@+id/btn_favorit"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        app:layout_constraintStart_toEndOf="@+id/btn_search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_search"
        app:layout_constraintEnd_toStartOf="@+id/btn_setting"
        android:drawableTop="@drawable/ic_favorite"
        android:background="@drawable/rounded_corner"/>
    <Button
        android:id="@+id/btn_setting"
        android:layout_width="@dimen/_36sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_favorit"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableTop="@drawable/ic_settings"
        android:background="@drawable/rounded_corner"/>
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toBottomOf="@+id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/welcome"
        android:textSize="@dimen/_28ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:text="@string/connect"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:orientation="horizontal"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/user_items_horizontal"/>

    <TextView
        android:id="@+id/tv_recommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_user_horizontal"
        android:text="@string/recommended_for_you"
        android:textColor="@color/text_secondary_color"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/roboto_medium"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user_vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recommended"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/user_items"/>
</androidx.constraintlayout.widget.ConstraintLayout>