<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/_12sdp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_detail_profile"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:transitionName="extra_image_transition"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/_4sdp"
                    tools:src="@drawable/user1"/>

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/img_detail_profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textSize="@dimen/_24ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    tools:text="Jake Wharton"/>
                <TextView
                    android:id="@+id/tv_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/text_secondary_color"
                    android:textSize="@dimen/_14ssp"
                    app:drawableStartCompat="@drawable/ic_github"
                    tools:text="JakeWharton"/>

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/text_secondary_color"
                    android:textSize="@dimen/_14ssp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:drawableStartCompat="@drawable/ic_location"
                    android:drawablePadding="@dimen/_4sdp"
                    tools:text="America"/>
                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/text_secondary_color"
                    android:textSize="@dimen/_14ssp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:drawablePadding="@dimen/_4sdp"
                    app:drawableStartCompat="@drawable/ic_company"
                    tools:text="Google Inc"/>

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_38sdp"
                    style="@style/buttonView"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/share"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btn_follow"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_38sdp"
                    app:layout_constraintTop_toBottomOf="@id/tv_company"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/buttonView"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="@string/follow"
                    android:textSize="@dimen/_12ssp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_32sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_share"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/text_secondary_color"
                    android:textSize="@dimen/_12ssp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:drawablePadding="@dimen/_4sdp"
                    android:text="@string/repository"/>

                <TextView
                    android:id="@+id/tv_detail_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/tv_repository"
                    app:layout_constraintEnd_toEndOf="@id/tv_repository"
                    app:layout_constraintTop_toBottomOf="@id/tv_repository"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    android:textAlignment="center"
                    tools:text="800"/>
                <TextView
                    android:id="@+id/tv_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/text_secondary_color"
                    android:fontFamily="@font/roboto_medium"
                    android:textAlignment="center"
                    android:text="@string/follower"
                    app:layout_constraintStart_toEndOf="@+id/tv_repository"
                    app:layout_constraintEnd_toStartOf="@id/tv_following"
                    app:layout_constraintTop_toBottomOf="@+id/btn_share"/>
                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_32sdp"
                    android:textAlignment="center"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/text_secondary_color"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/following"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_follow"/>
                <TextView
                    android:id="@+id/tv_detail_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@id/tv_follower"
                    app:layout_constraintStart_toStartOf="@+id/tv_follower"
                    app:layout_constraintEnd_toEndOf="@+id/tv_follower"
                    tools:text="800"/>
                <TextView
                    android:id="@+id/tv_detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintStart_toStartOf="@+id/tv_following"
                    app:layout_constraintEnd_toEndOf="@id/tv_following"
                    app:layout_constraintTop_toBottomOf="@id/tv_following"
                    tools:text="1000"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dp"
        android:background="@color/primary_dark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary_light"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_4sdp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>